k8s/02_blockchain-interactor/00_config-map.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: blockchain-interactor
