k8s/02_blockchain-interactor/03_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: blockchain-interactor
  annotations:
    konghq.com/plugins: kong-oidc,request-id
    kubernetes.io/ingress.class: kong
    konghq.com/strip-path: "true"
spec:
  rules:
  - host:
    http:
      paths:
      - path: /api/blockchain-interactor
        backend:
          serviceName: api
          servicePort: 80
